<resources>
    <string name="app_name">B07Project Mall</string>
    <string name="shopperlogin">Shopper Login</string>
    <string name="username">username:</string>
    <string name="password">password:</string>
    <string name="login">Login</string>
    <string name="ownerlogin">Owner Login</string>
    <string name="shoppersignup">Shopper Signup</string>
    <string name="signup">Signup</string>
    <string name="ownersignup">Owner Signup</string>
    <string name="return_to_main">Menu</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_password">enter your password</string>
    <string name="enter_your_username">enter your username</string>
    <string-array name="login_signup_choice">
        <item>shopper login</item>
        <item>shopper signup</item>
        <item>owner login</item>
        <item>owner signup</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>