<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_login_redirect"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".2" />

    <Button
        android:id="@+id/shopperlogin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopperlogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.266" />

    <Button
        android:id="@+id/shoppersignup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoppersignup"
        app:layout_constraintBottom_toBottomOf="@+id/shopperlogin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shopperlogin_button"
        app:layout_constraintTop_toTopOf="@+id/shopperlogin_button" />

    <Button
        android:id="@+id/ownerlogin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ownerlogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/shopperlogin_button"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="@+id/shopperlogin_button"
        app:layout_constraintTop_toBottomOf="@+id/shopperlogin_button"
        app:layout_constraintVertical_bias="0.326" />

    <Button
        android:id="@+id/ownersignup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ownersignup"
        app:layout_constraintBottom_toBottomOf="@+id/ownerlogin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ownerlogin_button"
        app:layout_constraintTop_toTopOf="@+id/ownerlogin_button" />
</androidx.constraintlayout.widget.ConstraintLayout>